crates/wdl-analysis/tests/validation/param-metadata-duplicate-keys/source.errors
error: duplicate key `foo` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:11:9
   │
 7 │         foo: "first"
   │         --- first key with this name is here
   ·
11 │         foo: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `bar` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:12:9
   │
 8 │         bar: "first"
   │         --- first key with this name is here
   ·
12 │         bar: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `foo` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:13:9
   │
 7 │         foo: "first"
   │         --- first key with this name is here
   ·
13 │         foo: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `foo` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:25:9
   │
21 │         foo: "first"
   │         --- first key with this name is here
   ·
25 │         foo: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `bar` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:26:9
   │
22 │         bar: "first"
   │         --- first key with this name is here
   ·
26 │         bar: "dup"
   │         ^^^ this key is a duplicate

error: duplicate key `foo` in parameter metadata section
   ┌─ tests/validation/param-metadata-duplicate-keys/source.wdl:27:9
   │
21 │         foo: "first"
   │         --- first key with this name is here
   ·
27 │         foo: "dup"
   │         ^^^ this key is a duplicate

